syntax = "proto3";

package cheers.party.v1;

import "cheers/type/party/party.proto";
import "cheers/type/user/user.proto";
import "google/protobuf/empty.proto";

option java_multiple_files = true;
option go_package = "github.com/salazarhugo/cheers1/genproto/cheers/party/v1;party";

service PartyService {
  rpc CreateParty (CreatePartyRequest) returns (cheers.type.Party);
  rpc ListParty (ListPartyRequest) returns (ListPartyResponse);
  rpc UpdateParty (UpdatePartyRequest) returns (cheers.type.Party);
  rpc DeleteParty (DeletePartyRequest) returns (google.protobuf.Empty);
}

message CreatePartyRequest {
  cheers.type.Party party = 1;
}

message UpdatePartyRequest {
  cheers.type.Party party = 1;
}

message DeletePartyRequest {
  string id = 1;
}

message ListPartyRequest {
  string parent = 1;
  int32 page_size = 2;
  string page_token = 3;
}

message ListPartyResponse {
  repeated cheers.type.Party parties = 1;
  string next_page_token = 2;
}